# argmin

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REFERENCES.bib
benchmarks/: CMakeLists.txt  alloc_trace_main.cpp  bench_argmin.h  bench_ceres.cpp  bench_ceres.h  bench_config.h  bench_dlib.cpp  bench_dlib.h  bench_ipopt.cpp  bench_ipopt.h  bench_libcmaes.cpp  bench_libcmaes.h  bench_micro_gate.h  bench_nablapp.h  bench_nlopt.cpp  bench_nlopt.h  bench_optim.cpp  bench_optim.h  bench_print.h  benchmark_driver.cpp  benchmark_result.h  counting_problem.h  diagnostic_kkt_breakdown.cpp  diagnostic_mma_asymptote_trace.cpp  diagnostic_mma_breakdown.cpp  filter_capacity_sweep.cpp  filter_envelope_sweep.cpp  filter_trsqp_sweep.cpp  gcmma_raa_schedule_sweep.cpp  isres_seed_sweep.cpp  methodology_contract_test.cpp  micro_active_set_qp.cpp  micro_augmented_lagrangian.cpp  micro_bobyqa.cpp  micro_byrd_lbfgsb.cpp  micro_cmaes.cpp  micro_cobyla.cpp  micro_filter_nw_sqp.cpp  micro_filter_slsqp.cpp  micro_filter_trsqp.cpp  (+23 more)
benchmarks/baselines/: benchmark-methodology-ledger.csv  disabled-after-sweep-register.csv  filter-envelope-publication-sweep.json  publication-regression.csv  v0.3.0-regression.csv  v0.3.1-regression.csv
benchmarks/scripts/: dm_profile.py  plot_convergence.sh  plot_profiles.sh  profile_nw_sqp_cost_jump.sh  regen_baseline.py  requirements.txt  run_publish_bench.sh  threshold_pair_sweep.py  verify_disabled_register.py
examples/: CMakeLists.txt  constrained_slsqp.cpp  derivative_free_bobyqa.cpp  example_common.h  least_squares_lm.cpp  step_level_control.cpp  unconstrained_lbfgsb.cpp
firmware/: CMakeLists.txt  README.md  link_gate_main.cpp
firmware/cmake/: toolchain-arm-none-eabi.cmake
firmware/esp32_probe/: CMakeLists.txt  onchip-result.md
firmware/esp32_probe/main/: CMakeLists.txt  probe_main.cpp
firmware/nucleo_h753zi/: CMakeLists.txt  nucleo_main.cpp  stm32h753zi_flash.ld  wrap_malloc.cpp
firmware/probe/: rt_probe_workload.h
lib/argmin/: CMakeLists.txt
lib/argmin/include/argmin/: argmin.h  derivative.h  expected.h  formulation.h  line_search.h  qp.h  result.h  rt.h  schedule.h  solver.h  types.h
lib/argmin/include/argmin/derivative/: finite_difference.h
lib/argmin/include/argmin/detail/: active_set_qp.h  asymptote_update.h  augmented_lagrangian.h  bound_projection.h  byrd_omojokun.h  cauchy_point.h  ccsa_dual_problem.h  cmaes_constants.h  cmaes_covariance.h  cmaes_sampling.h  cobyla_simplex.h  cobyla_trust_region.h  expected.h  (+37 more)
lib/nablapp/: CMakeLists.txt
lib/nablapp/include/nablapp/: derivative.h  formulation.h  hessian.h  line_search.h  nablapp.h  result.h  sampling.h  schedule.h  solver.h  types.h
mcu/: CMakeLists.txt  README.md  link_gate_main.cpp
mcu/cmake/: toolchain-arm-none-eabi.cmake
mcu/esp32_probe/: .gitignore  CMakeLists.txt  onchip-result.md  sdkconfig.defaults
mcu/esp32_probe/main/: CMakeLists.txt  probe_main.cpp
mcu/nucleo_h753zi/: CMakeLists.txt  nucleo_main.cpp  onchip-result.md  stm32h753zi_flash.ld  sweep-result.md  usart3_console.cpp  wrap_malloc.cpp
mcu/probe/: measure_temporaries_main.cpp  rt_probe_workload.h
python/: CMakeLists.txt  requirements.txt
python/argmin/: __init__.py
python/src/: _argmin.cpp
python/src/bindings/: nlp_derivative_free_bindings.cpp  nlp_gradient_bindings.cpp  qp_bindings.cpp  registrations.h  test_function_bindings.cpp  vocabulary_bindings.cpp
python/src/bindings/detail/: errors.h  format_number.h  keyword_options.h  problem_adapter.h  solver_wrapper.h  validate.h
python/tests/: conftest.py  test_callback_errors.py  test_defaults_sweep.py  test_errors.py  test_formatting.py  test_import.py  test_native_parity.py  test_nlp_abort.py  test_nlp_lifetime.py  test_nlp_solvers.py  test_qp_conversion.py  test_qp_defaults.py  test_qp_lifetime.py  test_qp_solve.py  test_qp_threading.py  test_qp_validation.py  test_randomized.py  test_source_invariants.py  test_step_control.py  test_surface_coverage.py  test_vocabulary.py
tests/: CMakeLists.txt
tests/compile/: CMakeLists.txt  concept_satisfaction_test.cpp  include_test.cpp  no_exceptions_instantiation_probe.cpp  policy_chrono_freedom_test.cpp  policy_rng_freedom_test.cpp  rt_header_test.cpp  runner_chrono_freedom_test.cpp  sqp_common_compile_test.cpp  sqp_mode_racing_test.cpp
tests/fuzz/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/consumer/: CMakeLists.txt  main.cpp
tests/oracles/: bobyqa_convergence.csv  cmaes_one_generation.csv  cobyla_convergence.csv  cobyla_parmu_trajectory.csv  mma_svanberg_coefficients.csv  solver_bit_identity_golden.csv
tests/property/: CMakeLists.txt
tests/regression/: CMakeLists.txt  regression_check.cpp
tests/unit/: CMakeLists.txt  active_set_qp_test.cpp  alloc_gate_fixtures.h  alloc_gate_test.cpp  alloc_sensor_b_linux.cpp  alloc_sensor_counters.cpp  auglag_gcmma_equality_test.cpp  auglag_mma_instantiation_test.cpp  augmented_lagrangian_test.cpp  basic_solver_test.cpp  bobyqa_bounds_test.cpp  bobyqa_test.cpp  bobyqa_xbase_shift_test.cpp  budget_driver_test.cpp  byrd_omojokun_test.cpp  cauchy_point_test.cpp  ccsa_quadratic_test.cpp  cmaes_generation_pin_test.cpp  cmaes_invalid_problem_test.cpp  cmaes_reset_parity_test.cpp  cmaes_sampling_test.cpp  cmaes_test.cpp  cobyla_determinism_test.cpp  cobyla_parmu_trajectory_test.cpp  cobyla_test.cpp  compact_lbfgs_test.cpp  convergence_policy_test.cpp  convergence_test.cpp  dense_admm_qp_test.cpp  dense_ldl_bfgs_test.cpp  detail_test.cpp  expect_move_asan_abort.cmake  expected_test.cpp  fd_verification.h  filter_acceptance_test.cpp  filter_nw_sqp_test.cpp  filter_sqp_test.cpp  filter_trsqp_test.cpp  finite_difference_test.cpp  gcmma_move_limit_shrink_test.cpp  (+63 more)
tests/unit/mm_data/: PROVENANCE.md  agboxa.h  agboxb.h  ageqa.h  ageqb.h  agineqa.h  agmixa.h  agrnga.h  mm_problems.h  mm_problems.inc
tests/unit/robustness/: abort_test.cpp  filter_restoration_test.cpp  kraft_recovery_test.cpp  mma_subproblem_dual_test.cpp  multistart_restart_test.cpp  restoration_terminal_test.cpp
(+237 files in other folders)
